force-app/main/default/objects/Top_Targeted_School__c/Top_Targeted_School__c.object-meta.xml
<CustomObject>
    <label>Top Targeted School</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Top Targeted Schools</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>