force-app/main/default/objects/Top_Targeted_School__c/fields/Mutually_Agreed_to_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Mutually_Agreed_to_Objectives__c</fullName>
    <label>Mutually Agreed to Objectives</label>
    <referenceTo>Mutually_Agreed_to_Objectives__c</referenceTo>
    <relationshipName>Visits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>