force-app/main/default/objects/Top_Targeted_School__c/fields/Substantive_Visits__c.field-meta.xml
<CustomField>
    <fullName>Substantive_Visits__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Substantive Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>